Switch to ZGC garbage collector and increase heap size to 2Gb